Fix input spacing rule on dropdown, add colored box shadows, add border colors to message

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -667,7 +667,7 @@ select.ui.dropdown {
   line-height: @multipleSelectionChildLineHeight;
 }
 .ui.multiple.dropdown > .label ~ input.search {
-  margin-left: @multipleSelectionSearchAfterLabelDistance;
+  margin-left: @multipleSelectionSearchAfterLabelDistance !important;
 }
 .ui.multiple.dropdown > .label ~ .text {
   display: none;
